--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
-
+        "laravel/tinker": "^2.5",
+        "lucascudo/laravel-pt-br-localization": "^2.2"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.14",
